task 2a added a page for the capital of little rock with required information, updated some of the CSS to include styling for the second page, added linking navigation to homepage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Little Rock</a></li>
+                <li><a href="little-rock.html">Little Rock</a></li>
                 <li><a href="#">Hot Springs</a></li>
                 <li><a href="#">Fayetteville</a></li>
             </ul>
