Initial layout and information for task A included little-rock.html, updated style sheet to include styling top to match layout of templaye, added a class to cover other cities layouts, added links to the new city in the home page, added placeholder in the footer for sources to go

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Arkansas Tourism. All rights reserved.</p>
+        <p>Sources/ sources link will go here</p>
     </footer>
 </body>
 </html>
