--- a/little-rock.html
+++ b/little-rock.html
@@ -6,16 +6,16 @@
     <title>Little Rock - Capital of Arkansas</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="city-page">
     <header>
         <div class="header-content">
-            <h1>Welcome to Little Rock</h1>
-            <p>The Capital of Arkansas</p>
+            <h1>Little Rock</h1>
+            <p>Capital of Arkansas - The Natural State</p>
         </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="littlerock.html">Little Rock</a></li>
+                <li><a href="little-rock.html">Little Rock</a></li>
                 <li><a href="#">Hot Springs</a></li>
                 <li><a href="#">Fayetteville</a></li>
             </ul>
@@ -23,42 +23,43 @@
     </header>
 
     <main>
-        <section class="intro">
-            <h2>About Little Rock</h2>
-            <p>Little Rock, the capital of Arkansas, is located in the central part of the state. It has a rich history and serves as a major hub for business, government, and culture.</p>
-        </section>
-
-        <section class="content">
-            <article>
-                <h2>Capital City Facts</h2>
-                <ul>
-                    <li><strong>Population:</strong> 202,591 (2023 estimate)</li>
-                    <li><strong>Incorporation Year:</strong> 1831</li>
-                    <li><strong>Region:</strong> Central Arkansas</li>
-                    <li><strong>Classification:</strong> Urban</li>
-                    <li><strong>Average Income Level:</strong> $47,597 (compared to state average of $43,000)</li>
-                </ul>
-            </article>
-
-            <aside>
-                <h2>Did You Know?</h2>
-                <p>Every president gets their own library and the city of Little Rock is home to the William J. Clintion Presidential Libbrary</p>
-            </aside>
-        </section>
-
-        <section class="gallery">
-            <h2>Explore Little Rock</h2>
-            <div class="image-grid">
+        <section class="city-info">
+            <div class="section-item">
+                <h2>Images of Little Rock</h2>
                 <img src="./images/littlerock1.jpg" alt="Downtown Little Rock">
+                <article>
+                    <h3>Little Rock Information</h3>
+                    <p>Population: 202,591 (2023 estimate)</p>
+                    <p>Incorporation Year: 1831</p>
+                    <p>Region: Central Arkansas</p>
+                    <p>Classification: Urban</p>
+                    <p>Average Income: $47,597</p>
+                </article>
+            </div>
+            <div class="section-item">
+                <h2>Images of Little Rock</h2>
                 <img src="./images/littlerock2.jpg" alt="Arkansas River running through Little Rock">
+                <article>
+                    <h3>Little Rock Demographics</h3>
+                    <p>Little Rock is a hub of business, education, and politics, contributing greatly to Arkansas’ economy and culture.</p>
+                </article>
+            </div>
+            <div class="section-item">
+                <h2>Images of Little Rock</h2>
                 <img src="./images/littlerock3.jpg" alt="William J. Clinton Presidential Library">
+                <article>
+                    <h3>Little Rock Attractions</h3>
+                    <p>Discover landmarks like the William J. Clinton Presidential Library, Riverfront Park, and more.</p>
+                </article>
             </div>
         </section>
     </main>
+    
 
     <footer>
-        <p>&copy; 2024 Arkansas Tourism. All rights reserved.</p>
+        <p>Sources/ sources link will go here</p>
     </footer>
 </body>
 </html>
+
 
