Added hotsprings and fayetteville cities, included basic information and images, updated homepage to include links from nav bar used cities

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="little-rock.html">Little Rock</a></li>
-                <li><a href="#">Hot Springs</a></li>
-                <li><a href="#">Fayetteville</a></li>
+                <li><a href="hotsprings.html">Hot Springs</a></li>
+                <li><a href="fayetteville.html">Fayetteville</a></li>
             </ul>
         </nav>
     </header>
