--- a/little-rock.html
+++ b/little-rock.html
@@ -16,8 +16,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="little-rock.html">Little Rock</a></li>
-                <li><a href="#">Hot Springs</a></li>
-                <li><a href="#">Fayetteville</a></li>
+                <li><a href="hotsprings.html">Hot Springs</a></li>
+                <li><a href="fayetteville.html">Fayetteville</a></li>
             </ul>
         </nav>
     </header>
