--- a/little-rock.html
+++ b/little-rock.html
@@ -18,6 +18,7 @@
                 <li><a href="little-rock.html">Little Rock</a></li>
                 <li><a href="hotsprings.html">Hot Springs</a></li>
                 <li><a href="fayetteville.html">Fayetteville</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
