updated state information

--- a/little-rock.html
+++ b/little-rock.html
@@ -26,15 +26,15 @@
     <main>
         <section class="city-info">
             <div class="section-item">
-                <h2>Images of Little Rock</h2>
+                <h2>About Little Rock</h2>
                 <img src="./images/littlerock1.jpg" alt="Downtown Little Rock">
                 <article>
                     <h3>Little Rock Information</h3>
-                    <p>Population: 202,591 (2023 estimate)</p>
+                    <p>Population: 202,864 (2022)</p>
                     <p>Incorporation Year: 1831</p>
                     <p>Region: Central Arkansas</p>
                     <p>Classification: Urban</p>
-                    <p>Average Income: $47,597</p>
+                    <p>Average Income: $58,697 - 1% above state average($56,335)</p>
                 </article>
             </div>
             <div class="section-item">
