Updated city information

--- a/fayetteville.html
+++ b/fayetteville.html
@@ -26,15 +26,15 @@
     <main>
         <section class="city-info">
             <div class="section-item">
-                <h2>Images of Fayetteville</h2>
+                <h2>About Fayetteville</h2>
                 <img src="./images/fayetteville1.jpg" alt="Fayetteville view">
                 <article>
                     <h3>City Information</h3>
-                    <p>Population: 93,949 (2023 estimate)</p>
+                    <p>Population: 99,285 (2022)</p>
                     <p>Incorporation Year: 1870</p>
                     <p>Region: Northwest Arkansas</p>
                     <p>Classification: Urban</p>
-                    <p>Average Income: $51,600 (higher than state average)</p>
+                    <p>Average Income: $56,881 - slightly above state average ($56,335)</p>
                 </article>
             </div>
             <div class="section-item">
