uupdated city information

--- a/hotsprings.html
+++ b/hotsprings.html
@@ -26,15 +26,15 @@
     <main>
         <section class="city-info">
             <div class="section-item">
-                <h2>Images of Hot Springs</h2>
+                <h2>About Hot Springs</h2>
                 <img src="./images/hotsprings1.jpg" alt="Hot Springs view">
                 <article>
                     <h3>City Information</h3>
-                    <p>Population: 37,930 (2023 estimate)</p>
+                    <p>Population: 38,109 (2022 estimate)</p>
                     <p>Incorporation Year: 1851</p>
                     <p>Region: Central Arkansas</p>
                     <p>Classification: Suburban/Rural</p>
-                    <p>Average Income: $39,500 (lower than state average)</p>
+                    <p>Average Income: $46,537 - 20% below state average ($56,335)</p>
                 </article>
             </div>
             <div class="section-item">
