added top three things with external links

--- a/little-rock.html
+++ b/little-rock.html
@@ -38,11 +38,16 @@
                 </article>
             </div>
             <div class="section-item">
-                <h2>Images of Little Rock</h2>
+                <h2>Top 3 Things to do!</h2>
                 <img src="./images/littlerock2.jpg" alt="Arkansas River running through Little Rock">
                 <article>
-                    <h3>Little Rock Demographics</h3>
-                    <p>Little Rock is a hub of business, education, and politics, contributing greatly to Arkansas’ economy and culture.</p>
+                    <h3>Things to do and places to see!</h3>
+                    <ol>
+                        <li><a href="https://museumofdiscovery.org/" target="_blank">Museum of Discover</a></li>
+                        <li><a href="https://www.clintonlibrary.gov/" target="_blank">William J. Clinton Library</a></li>
+                        <li><a href="https://www.arkansas.com/big-dam-bridge" target="_blank">Big Dam Bridge</a></li>
+                    </ol>
+                    
                 </article>
             </div>
             <div class="section-item">
