added top three things to do in hotsprings.html

--- a/hotsprings.html
+++ b/hotsprings.html
@@ -38,11 +38,15 @@
                 </article>
             </div>
             <div class="section-item">
-                <h2>Images of Hot Springs</h2>
+                <h2>Top 3 Things to do!</h2>
                 <img src="./images/hotsprings2.jpg" alt="Historic buildings in Hot Springs">
                 <article>
-                    <h3>Historic Significance</h3>
-                    <p>Hot Springs National Park is one of the oldest federal reserves, making it a significant landmark in the region.</p>
+                    <h3>Things to do and places to see!</h3>
+                    <ol>
+                        <li><a href="https://www.nps.gov/hosp/index.htm" target="_blank">Hot Springs National Park</a></li>
+                        <li><a href="https://hotspringstower.com/" target="_blank">Hot Springs Mountain Tower</a></li>
+                        <li><a href="https://www.nps.gov/hosp/learn/historyculture/fordyce-bathhouse.htm" target="_blank">Fordyce Bathhouse</a></li>
+                    </ol>
                 </article>
             </div>
             <div class="section-item">
