added top 3 things to do in fayetteville.html

--- a/fayetteville.html
+++ b/fayetteville.html
@@ -38,11 +38,15 @@
                 </article>
             </div>
             <div class="section-item">
-                <h2>Images of Fayetteville</h2>
+                <h2>Top 3 Things to do!</h2>
                 <img src="./images/fayetteville2.jpg" alt="University of Arkansas">
                 <article>
-                    <h3>Educational Hub</h3>
-                    <p>Fayetteville is home to the University of Arkansas, a major center for education and research in the state.</p>
+                    <h3>Things to do and places to see!</h3>
+                    <ol>
+                        <li><a href="https://bgozarks.org/" target="_blank">Botanical Gardens</a></li>
+                        <li><a href="https://waltonartscenter.org/" target="_blank">Walton Arts Center</a></li>
+                        <li><a href="https://www.fayetteville-ar.gov/3130/Lake-Fayetteville" target="_blank">Lake Fayetteville Park</a></li>
+                    </ol>
                 </article>
             </div>
             <div class="section-item">
