Added a page for sources and added a link from all pages attaching to it. Included 3x3 table

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-        <p>Sources</p>
+        <p><a href="workscited.html">*See Sources</a>
     </footer>
 </body>
 </html>
