--- a/fayetteville.html
+++ b/fayetteville.html
@@ -29,7 +29,7 @@
                 <h2>About Fayetteville</h2>
                 <img src="./images/fayetteville1.jpg" alt="Fayetteville view">
                 <article>
-                    <h3>City Information</h3>
+                    <h3>Fayetteville Information*</h3>
                     <p>Population: 99,285 (2022)</p>
                     <p>Incorporation Year: 1870</p>
                     <p>Region: Northwest Arkansas</p>
@@ -50,7 +50,6 @@
                 </article>
             </div>
             <div class="section-item">
-                <h2>Images of Fayetteville</h2>
                 <img src="./images/fayetteville3.jpg" alt="Fayetteville square">
                 <article>
                     <h3>Local Culture and Attractions</h3>
@@ -61,7 +60,8 @@
     </main>
 
     <footer>
-        <p>sources here</p>
+        <p><a href="workscited.html">*See Sources  </a></p> 
+        <p id = "questions"><a href="contact.html"> Questions?</a></p>    
     </footer>
 </body>
 </html>
