--- a/hotsprings.html
+++ b/hotsprings.html
@@ -29,7 +29,7 @@
                 <h2>About Hot Springs</h2>
                 <img src="./images/hotsprings1.jpg" alt="Hot Springs view">
                 <article>
-                    <h3>City Information</h3>
+                    <h3>Hot Springs Information*</h3>
                     <p>Population: 38,109 (2022 estimate)</p>
                     <p>Incorporation Year: 1851</p>
                     <p>Region: Central Arkansas</p>
@@ -50,7 +50,6 @@
                 </article>
             </div>
             <div class="section-item">
-                <h2>Images of Hot Springs</h2>
                 <img src="./images/hotsprings3.jpg" alt="Bathhouses in Hot Springs">
                 <article>
                     <h3>Tourist Attractions</h3>
@@ -61,7 +60,8 @@
     </main>
 
     <footer>
-        <p>sources here</p>
+        <p><a href="workscited.html">*See Sources  </a></p> 
+        <p id = "questions"><a href="contact.html"> Questions?</a></p>    
     </footer>
 </body>
 </html>
