--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <aside>
                 <h2>A Diamond In the Rough!</h2>
-                <p>Arkansas is home to the only active diamond mine in the United States, located at Crater of Diamonds State Park.</p>
+                <p>Arkansas is home to the only active diamond mine in the United States, located at Crater of Diamonds State Park.*</p>
             </aside>
         </section>
 
@@ -52,7 +52,8 @@
     </main>
 
     <footer>
-        <p>Sources/ sources link will go here</p>
+        <p><a href="workscited.html">*See Sources  </a></p> 
+        <p id = "questions"><a href="contact.html"> Questions?</a></p>       
     </footer>
 </body>
 </html>
