--- a/little-rock.html
+++ b/little-rock.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-content">
             <h1>Little Rock</h1>
-            <p>Capital of Arkansas - The Natural State</p>
+            <p>Capital of Arkansas</p>
         </div>
         <nav>
             <ul>
@@ -29,7 +29,7 @@
                 <h2>About Little Rock</h2>
                 <img src="./images/littlerock1.jpg" alt="Downtown Little Rock">
                 <article>
-                    <h3>Little Rock Information</h3>
+                    <h3>Little Rock Information*</h3>
                     <p>Population: 202,864 (2022)</p>
                     <p>Incorporation Year: 1831</p>
                     <p>Region: Central Arkansas</p>
@@ -51,7 +51,7 @@
                 </article>
             </div>
             <div class="section-item">
-                <h2>Images of Little Rock</h2>
+                
                 <img src="./images/littlerock3.jpg" alt="William J. Clinton Presidential Library">
                 <article>
                     <h3>Little Rock Attractions</h3>
@@ -63,7 +63,8 @@
     
 
     <footer>
-        <p>Sources/ sources link will go here</p>
+        <p><a href="workscited.html">*See Sources </a></p> 
+        <p id = "questions"><a href="contact.html"> Questions?</a></p>  
     </footer>
 </body>
 </html>
