added aside element, image with alt, to contact.html, informaing users that their information is not saved

--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,11 @@
             </form>
         </section>
     </main>
+    <aside class = "small-box">
+        <h2>Dont worry!</h2>
+        <img src="./images/exclamationpoint.jpg" alt="Exclamation point inside a chat bubble">
+        <p>Your information will not be saved!</p>
+    </aside>
 
     <footer>
         <p><a href="workscited.html">*See Sources</a>
@@ -73,6 +78,6 @@
             }
         });
     </script>
-    
+
 </body>
 </html>
