added aside element displaying extra information to little-rock.html, fayetteville.html, and hotsprings.html

--- a/fayetteville.html
+++ b/fayetteville.html
@@ -49,13 +49,13 @@
                     </ol>
                 </article>
             </div>
-            <div class="section-item">
+            <aside class="section-item">
                 <img src="./images/fayetteville3.jpg" alt="Fayetteville square">
                 <article>
                     <h3>Local Culture and Attractions</h3>
                     <p>The Fayetteville square, parks, and vibrant arts scene attract visitors year-round.</p>
                 </article>
-            </div>
+            </aside>
         </section>
     </main>
 
