--- a/hotsprings.html
+++ b/hotsprings.html
@@ -49,13 +49,13 @@
                     </ol>
                 </article>
             </div>
-            <div class="section-item">
+            <aside class="section-item">
                 <img src="./images/hotsprings3.jpg" alt="Bathhouses in Hot Springs">
                 <article>
                     <h3>Tourist Attractions</h3>
                     <p>The city's bathhouses and scenic parks make Hot Springs a prime tourist destination.</p>
                 </article>
-            </div>
+            </aside>
         </section>
     </main>
 
