--- a/workscited.html
+++ b/workscited.html
@@ -24,6 +24,7 @@
     <main>
         <section class="works-cited">
             <h2>Information sources</h2>
+            <img src="./images/work-cited.png" alt="globe next to a stack of books" id = workcitedimage>
             <table>
                 <thead>
                     <tr>
@@ -52,6 +53,9 @@
             </table>
         </section>
     </main>
+    <aside class="learn-more">
+        <p>To learn more about Arkansas, <a href="https://www.arkansas.com/" target="_blank">click here</a>.</p>
+    </aside>
     <footer>
         <p id = "questions"><a href="contact.html"> Questions?</a></p>  
     </footer>
